ELEMENTS-1230: fix overflow in nuxeo-data-table

--- a/widgets/selectivity/selectivity.css
+++ b/widgets/selectivity/selectivity.css
@@ -111,8 +111,6 @@
 .selectivity-multiple-input-container {
   cursor: text;
   min-height: 2em;
-  max-height: 10em;
-  overflow: auto;
   padding: 14px 2px 0px 2px;
   position: relative;
 }
